[package]
name = "aios-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Kernel orchestration layer for the Agent OS — tick lifecycle, agent loop, and composite runtime"

[dependencies]
aios-events = { path = "../aios-events", version = "0.2.0" }
aios-protocol = { path = "../aios-protocol", version = "0.2.0" }
aios-policy = { path = "../aios-policy", version = "0.2.0" }
aios-runtime = { path = "../aios-runtime", version = "0.2.0" }
aios-sandbox = { path = "../aios-sandbox", version = "0.2.0" }
aios-tools = { path = "../aios-tools", version = "0.2.0" }
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
